[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Residuo.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Mundo.gd" type="Script" id=2]
[ext_resource path="res://assets/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://image/fondo_mundo.png" type="Texture" id=4]
[ext_resource path="res://assets/Caneca.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/tabla.png" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -3.3728, -0.793671, 0, 0, 0, 0, 397.282, 0.466248 )
}

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 2.50265, -249.338 )
b = Vector2( 2.42782, 475.772 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "tabla",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 204.923, 12.0406 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 206, 3 )

[node name="Mundo" type="Node"]
script = ExtResource( 2 )
Residuo = ExtResource( 1 )
Caneca = ExtResource( 5 )

[node name="Fondo" type="Sprite" parent="."]
scale = Vector2( 0.65, 1.1 )
texture = ExtResource( 4 )
centered = false

[node name="HUD" parent="." instance=ExtResource( 3 )]
pause_mode = 2

[node name="ResiduoTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="ResiduoPosicion" type="PathFollow2D" parent="Camino"]
position = Vector2( -3.3728, -0.793671 )
rotation = 0.00314466

[node name="Pared2" type="RigidBody2D" parent="."]
position = Vector2( -80.6333, 221.651 )
collision_layer = 3
collision_mask = 3
mode = 1
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pared2"]
position = Vector2( -19.3083, 7.91795 )
scale = Vector2( 25, 1 )
shape = SubResource( 2 )

[node name="Pared" type="RigidBody2D" parent="."]
position = Vector2( 402.823, 222.434 )
collision_layer = 3
collision_mask = 3
mode = 1
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pared"]
position = Vector2( -32.8798, 4.24437 )
scale = Vector2( 30, 1 )
shape = SubResource( 2 )

[node name="Tablero" type="RigidBody2D" parent="."]
position = Vector2( 200, 560 )
collision_layer = 2
collision_mask = 2
mode = 1
gravity_scale = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Tablero"]
position = Vector2( -0.0891106, 12.2497 )
scale = Vector2( 1.03175, 0.990437 )
frames = SubResource( 3 )
animation = "tabla"

[node name="CollisionTablero" type="CollisionShape2D" parent="Tablero"]
position = Vector2( 1.68182, 0.723175 )
shape = SubResource( 4 )

[node name="PositionCanecaAprovechable" type="Position2D" parent="."]
position = Vector2( 78, 632 )

[node name="PositionCanecaNoAprovechable" type="Position2D" parent="."]
position = Vector2( 208, 632 )

[node name="PositionCanecaOrganica" type="Position2D" parent="."]
position = Vector2( 338, 632 )

[node name="Top" type="Area2D" parent="."]
position = Vector2( 197, -1 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource( 5 )

[connection signal="game_over" from="HUD" to="." method="_on_HUD_game_over"]
[connection signal="timeout" from="ResiduoTimer" to="." method="_on_ResiduoTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
